New Home page and logo
Modified the homepage

--- a/Facilities.css
+++ b/Facilities.css
@@ -14,7 +14,7 @@ body
 
 .logo
 {
-	margin-top: -12px;
+	margin-top: -11px;
 }
 
 .navMain
@@ -222,4 +222,19 @@ h3
 	padding: 45px 0 20px;
 	color: #737373
 	line-height:26px;
+}
+
+h4
+{
+	padding: 3px 10px;
+    background-color: #BFF63E;
+	border-radius: 12px;
+	cursor: pointer;
+}
+
+h4:hover
+{
+	color: #88124D;
+	transition: .5s;
+	filter: alpha(opacity=50)
 }
