--- a/Home page.css
+++ b/Home page.css
@@ -2,19 +2,19 @@
 {
 	padding: 0;
 	margin: 0;
-	box-sizing: border-box; 
+	box-sizing: border-box;
 
 }
 
 body
 { 
+	margin: 0;
 	font-family: Now;
-	background-color: #FFEDF7;
 }
 
 .navMain
 {
-	background-color: #622350;
+	background-color: #ffffff;
 	height: 80px;
 	width: 100%;
 
@@ -23,7 +23,7 @@ body
 
 .logo
 {
-  margin-top: -12px;
+  margin: 3px 15px;
 }
 
 .menu /*to change the position of the nav bar list*/
@@ -37,22 +37,22 @@ body
 .menu a /*to change the style & display order*/
 {
 	display: inline-block;
-	line-height: 20px;
-	margin: 30px 2px;
-	color: white;
+	line-height: 25px;
+	margin: 20px 2px;
+	color: #B3699E;
 	font-size: 12px;
 	text-transform: uppercase;
-	padding:3px 10px;
+	padding:2px 10px;
 	border-radius: 20px;
 	text-decoration: none;
 	
 }
 
-a.active,a:hover /* animation of the nav bar elements*/
+a.active,.menu a:hover /* animation of the nav bar elements*/
 {
 	background-color: #4B1D3D;
 	color: #B3699E;
-	transition: 0.8s;
+	transition: .6s;
 }
 
 .mbar
@@ -71,6 +71,79 @@ a.active,a:hover /* animation of the nav bar elements*/
 	display: none;
 	
 }
+
+#introduction
+{
+	background-image: url("bg-wall-mid.jpg");
+	padding: 80px 0;
+}
+
+#head-mid
+{
+	font-family: Gabriola;
+	font-size: 40px;
+	display: block;
+	margin-bottom: -25px;
+	text-align: center;
+	color: #915580;
+}
+
+#subhead-mid
+{
+	font-family: 'century gothic';
+	text-transform: uppercase;
+	font-size: 20px;
+	margin-bottom: 20px;
+	text-align: center;
+    font-weight: 200;
+    color: #B787AA;
+}
+
+#intro1,#intro2,#intro3
+{
+	text-align: center;
+	font-family: 'century gothic';
+	opacity: 70%;
+	margin: 10px 205px;
+	font-size: 15px;
+}
+
+#about
+{
+	font-family: 'century gothic';
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #CA286A;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-width: 1px;
+}
+
+#about:hover
+{
+	background-color: #6B4960;
+	color: #ffffff;
+	border : 20px;
+	transition: .8s;
+	padding: 5px 10px;
+}
+
+.about-destinations
+{
+	background-color: #6B4960;
+	margin-right: 860px;
+	padding-bottom: 400px;
+}
+
+.footer
+{
+	text-align: center;
+	font-size: 12px;
+	color: white;
+	height: 150px;
+	background-color: #3F3D3E;
+}
+
 
 @media only screen and (max-width:1150px)
 {
