--- a/Facilities.css
+++ b/Facilities.css
@@ -8,25 +8,25 @@
 body
 {
 	
-	background-color: #FFE4F1;
-	color: white;
+	margin: 0;
+	font-family: Now;
 }
 
 .logo
 {
-	margin-top: -11px;
+	margin: 3px 15px;
 }
 
 .navMain
 {
-	width: 100%;
+	background-color: #ffffff;
 	height: 80px;
-	background-color: #622350;
+	width: 100%;
 }
 
 .menu
 {
-	font-family: Now;
+	/*font-family: Now; */
 	float: right;
 	margin-right: 15px;
 }
@@ -34,21 +34,21 @@ body
 .menu a
 {
 	display: inline-block;
-	text-decoration: none;
-	color: white;
-	line-height: 20px;
-	margin: 30px 2px;
-	text-transform: uppercase;
+	line-height: 25px;
+	margin: 20px 2px;
+	color: #B3699E;
 	font-size: 12px;
-	padding: 3px 10px;
+	text-transform: uppercase;
+	padding:2px 10px;
 	border-radius: 20px;
+	text-decoration: none;
 }
 
-a.active,a:hover
+a.active,.menu a:hover /* animation of the nav bar elements*/
 {
-   background-color: #4B1D3D;
+    background-color: #4B1D3D;
 	color: #B3699E;
-	transition: 0.8s;
+	transition: .6s;
 }
 
 .mbar
@@ -184,7 +184,6 @@ h3
 	text-align: center;
 	padding-top: 45px;
 	color: #622350;
-	
 	font-size: 19px;
 }
 
@@ -202,7 +201,7 @@ h3
   text-align: center;
 	padding-top: 45px;
 	color: #622350;
-	
+
 	font-size: 30px;
 }	
 
@@ -212,7 +211,6 @@ h3
 	text-align: center;
 	padding-top: 45px;
 	color: #622350;
-	
 	font-size: 19px;
 }
 
@@ -227,14 +225,9 @@ h3
 h4
 {
 	padding: 3px 10px;
-    background-color: #BFF63E;
-	border-radius: 12px;
+	color: #000000;
 	cursor: pointer;
-}
-
-h4:hover
-{
-	color: #88124D;
-	transition: .5s;
-	filter: alpha(opacity=50)
+	border: solid;
+	border-width: .1px;
+	background: rgba(255,255,255,.4);
 }
