--- a/Home page.css
+++ b/Home page.css
@@ -27,7 +27,7 @@ body
 .menu /*to change the position of the nav bar list*/
 {
 	float: right;
-	margin-right: 15px;
+	margin-right: 65px;
 }
 
 .menu a /*to change the style & display order*/
@@ -60,6 +60,60 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 	display: none;
 }
 
+.dropbtn
+{
+  
+  color: #B3699E;
+  padding: 12px;
+  font-size: 12px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.dropD
+{
+  position: relative;
+  display: inline-block;
+}
+
+.dropList
+{
+  display: none;
+  position: absolute;
+  min-width: 135px;
+
+}
+
+.dropList a 
+{
+  margin: 0;
+  color: #B3699E;
+  border-color: #B3699E;
+  background-color: #D19FAD;
+  padding: 3px 12px;
+  text-decoration: none;
+  display: block;
+ 
+}
+
+.dropList a:hover {background-color: #4B1D3D;}
+
+.dropD:hover .dropList 
+{
+  display: block;
+}
+
+.dropD:hover .dropbtn
+{
+  background-color: #4B1D3D;
+}
+
+
+
+
 #toggle
 {
 	float: right;
@@ -68,10 +122,14 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 	
 }
 
+
+
+
 #introduction
 {
 	background-image: url("bg-wall-mid.jpg");
 	padding: 80px 0;
+	padding-bottom: 170px;
 }
 
 #head-mid
@@ -124,14 +182,196 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 	padding: 5px 10px;
 }
 
-.about-destinations
+.destinations-background
 {
-	background-color: #6B4960;
-	margin-right: 860px;
-	padding-bottom: 400px;
+	background-image: url("lavista-red.jpg");
+	-webkit-background-size: cover;
+	background-size: cover;
+	width: 395px;
+	height: 565px;
+	border: solid #fff;
+	border-bottom-left-radius: 70px;
+	border-top-right-radius: 70px;
 }
 
-.footer
+.about-destinations
+{
+	background-color: #1E3F5E;
+	margin-right: 1110px;
+	padding-bottom: 20px;
+	border: 10px solid #fff;
+	border-bottom-left-radius: 70px;
+	border-top-right-radius: 70px;
+	opacity: .8;
+	margin-top: -565px;
+}
+
+#destination-tag
+{
+	padding-top: 35px;
+	font-family: Gabriola;
+	font-size: 38px;
+	text-transform: uppercase;
+	color: #9CF325;
+	text-align: center;
+}
+
+#description-destinations
+{
+	font-size: 15px;
+	text-align: center;
+	font-family: 'century gothic';
+	padding: 20px 30px 0 30px;
+	color: white;
+}
+
+#hotelnames
+{
+	text-align: center;
+	padding-top: 45px;
+	font-family: Gabriola;
+	color: white;
+	font-size: 26px;
+}
+
+#hotels 
+{
+	text-decoration:none;
+	margin-left: 110px;
+	line-height: 120px;
+	font-family: Gabriola;
+	color: white;
+	padding: 8px 10px;
+	border: 2px solid #fff;
+	border-bottom-left-radius: 20px;
+	border-top-right-radius: 20px;
+	font-size: 19px;
+}
+
+#hotels:hover
+{
+	background-color: #ffff;
+	color: #6B4960;
+	transition: .8s;
+}
+
+.hotel-image-grid
+{
+	margin-top: -570px;
+	margin-bottom: 10px;
+	margin-left: 400px;
+
+}
+
+#destination-container
+{
+	width: 100%;
+}
+
+#facilities-description
+{
+	margin-top: 70px;
+	text-align: center;
+}
+
+
+/* Slideshow container */
+.facilities-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+
+
+
+#footer
 {
 	text-align: center;
 	font-size: 12px;
@@ -140,7 +380,7 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 	background-color: #3F3D3E;
 }
 
-
+/*smartphones nav*/
 @media only screen and (max-width:1150px)
 {
 	.mbar
