--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,4 @@
+
 *
 {
 	padding: 0;
@@ -62,7 +63,7 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 
 .dropbtn
 {
-  background-color: #4B1D3D;
+  
   color: #B3699E;
   padding: 12px;
   font-size: 12px;
@@ -137,80 +138,29 @@ a.active,.menu a:hover /* animation of the nav bar elements*/
 body 
 {
     font-family: 'century gothic';
+    background-image: url(about-wall.jpg);
     
 }
-.contact a{
-    font-size: 40px;
-    display: inline-block;
-    text-decoration: none;
-    clear: both;
-    text-align: center;
-    color: #B3699E;
-    
-}
-.contact a:hover{
-    color: black;
-}
-.contact {
-    position: fixed;;
-    bottom: 0;
-    right: 0;
-    width: auto;
-    left: 1;
-    bottom: 0;
-    padding: 10px;
-}
-#fac
+.forms
 {
-    text-align: center;
-    font-size: 50px; 
-}
-.facilities
-{
-    padding-bottom: 5%;
-    text-align: center;
-    background-image: linear-gradient(to right,white, pink, white); 
-}
-
-.facilities span
-{
-    font-size:25px;
-    text-align: center;
-    padding: 0px 20px;
-}
-
-.facilities a
-{
-    text-decoration: none;
-    color:black;
-}
-.facilities a:hover
-{   
-    transition: .6s;
-    background-color: rgba(153, 0, 115,0.3);
-    padding : 50px 18px;
-
-}
-.fest img 
-{
+    margin-left: auto;
+    margin-right: auto;
     width:40%;
-    position: absolute;
-    left: 10%;
-    border-top-right-radius: 10%;
-    border-bottom-left-radius: 10%;
+    background-color: rgba(153, 0, 115,0.3);
+    padding: 100px;
+    border: #4B1D3D, 2px, solid;
+    font-size: 20px;
 }
-.fest div 
+.forms input
 {
-    border-left:4px solid black;
-    font-size: 30px;
-    float: right;
+    font-size: 20px;
+    size: 40px;
+}
+h1
+{
+    color: rgb(153, 0, 115);
     text-align: center;
-    padding: 10% 1% 10% 1%;
-    margin:1% 6% 5% 55%;
-    background-image: linear-gradient(to top, white,pink, white);
+    font-size: 60px;
+    margin-top:30px;
+    margin-bottom: 20px;
 }
-.vid
-{
-    margin-top: 8%;
-}
-
